Preparing v1.4 clausing milestone v1.4 and changing SQL-Server security enforcement
closes #6 closes #7 closes #9 closes #10 close #11 closes #12 and closes
#13

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ _mpd/SPLogger.pdb
 _mpd/SPLogger.pdm
 _mpd/SPLogger.sws
 *.apm
+_mpd/SPLogger-UT.pdm
+_mpd/SPLogger-UT.pdb
+_mpd/SPLogger-UT.pdm
+_mpd/SPLogger-UT.pdb
